kubernetes/homelab/applications/argocd/argocd-route.yaml
# ArgoCD UI
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "argocd.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: argocd-server
        port: 80
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
